# task-scheduler

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  main_client.cpp  task_client.cpp
include/: client.hpp  logger.hpp  scheduler.hpp  security.hpp  server.hpp  task.hpp
src/: CMakeLists.txt  client.cpp  logger.cpp  main_client.cpp  main_server.cpp  scheduler.cpp  security.cpp  server.cpp  task.cpp  task_server.cpp
tests/: CMakeLists.txt  test_imports.cpp  test_scheduler.cpp
